# rust_thread_test

./: .env  .gitignore  Cargo.toml
src/: main.rs
src/services/: api_service.rs  http_service.rs  mod.rs
webservice/: Cargo.toml  build.rs
webservice/grpc_proto/Game/: Service.proto
webservice/grpc_proto/Plat/: AccountService.proto
webservice/src/: error.rs  routers.rs  state.rs
webservice/src/dbaccess/: account.rs  account_redis.rs  grpc_client.rs  leiting_http.rs  mod.rs  order.rs  redis.rs  whiteserver.rs
webservice/src/handlers/: account.rs  general.rs  leiting.rs  mod.rs  order.rs
webservice/src/models/: account.rs  letting.rs  mod.rs  order.rs  whiteserver.rs
